@@ -620,6 +620,20 @@ argument_list|(
 literal|"Overloaded"
 argument_list|)
 decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|byte
+index|[]
+name|META_REGION_PREFIX
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|".META.,"
+argument_list|)
+decl_stmt|;
 comment|/**    * Map of region name to RegionState for regions that are in transition such as    *     * unassigned -> pendingOpen -> open    * closing -> pendingClose -> closed; if (closed&& !offline) -> unassigned    *     * At the end of a transition, removeRegion is used to remove the region from    * the map (since it is no longer in transition)    *     * Note: Needs to be SortedMap so we can specify a comparator    *     * @see RegionState inner-class below    */
 specifier|final
 name|SortedMap
@@ -3153,7 +3167,7 @@ return|return
 name|metaRegions
 return|;
 block|}
-comment|/**    * Get metaregion that would host passed in row.    * @param row Row need to know all the meta regions for    * @return set of MetaRegion objects that contain the table    * @throws NotAllMetaRegionsOnlineException    */
+comment|/**    * Get metaregion that would host passed in row.    * @param row Row need to know all the meta regions for    * @return MetaRegion for passed row.    * @throws NotAllMetaRegionsOnlineException    */
 specifier|public
 name|MetaRegion
 name|getMetaRegionForRow
@@ -3178,6 +3192,59 @@ operator|new
 name|NotAllMetaRegionsOnlineException
 argument_list|()
 throw|;
+block|}
+comment|// Row might be in -ROOT- table.  If so, return -ROOT- region.
+name|int
+name|prefixlen
+init|=
+name|META_REGION_PREFIX
+operator|.
+name|length
+decl_stmt|;
+if|if
+condition|(
+name|row
+operator|.
+name|length
+operator|>
+name|prefixlen
+operator|&&
+name|Bytes
+operator|.
+name|compareTo
+argument_list|(
+name|META_REGION_PREFIX
+argument_list|,
+literal|0
+argument_list|,
+name|prefixlen
+argument_list|,
+name|row
+argument_list|,
+literal|0
+argument_list|,
+name|prefixlen
+argument_list|)
+operator|==
+literal|0
+condition|)
+block|{
+return|return
+operator|new
+name|MetaRegion
+argument_list|(
+name|this
+operator|.
+name|master
+operator|.
+name|getRootRegionLocation
+argument_list|()
+argument_list|,
+name|HRegionInfo
+operator|.
+name|ROOT_REGIONINFO
+argument_list|)
+return|;
 block|}
 return|return
 name|this
